name:                sitehaskus
version:             0.1.0.0
author:              Sylvain HENRY
maintainer:          sylvain@haskus.fr
build-type:          Simple
cabal-version:       >=1.10

executable sitehaskus
   main-is: hakyll.hs
   hs-source-dirs: src
   build-depends:
      base     >=4.8,
      hakyll   >= 4.9,
      text     >= 1.2,
      filepath >= 1.4

   default-language:    Haskell2010
   ghc-options: -Wall
